2013-04-01 v-0.1.8
  (fix) autoupdate
  
2013-04-01 v-0.1.7
  (add) license headers
  (change) use hd-idle for hdd spindown
  
2013-03-30 v-0.1.6 
  (fix) hide ssh service if kernel parameter is set (read file)
  
2013-03-30 v-0.1.5 
  (add) hide ssh service if kernel parameter is set 
  
2013-03-27 v-0.1.4 
  (fix) enable / disable | wifi / ethernet 
  
2013-03-25 v-0.1.3
  (fix) Move Update Files after extract
  (fix) network service autoconnect
  (add) start service addon on startup

2013-03-11 v-0.1.2
  (add) Info Text Placeholder added in Strings.xml
  (add) Display InfoText Placeholder in bottom

2013-03-08 v-0.1.1
  (change) about dialog change donate text
  (change) connman context menu order
  
2013-03-08 v-0.1.0
  (change) about dialog rework
  
2013-03-08 v-0.0.29
  (change) Check for updates every 6 hours
  (add) Network wait 
  (change) extract updates to /storage/.xbmc/temp and move on complete
  (add) backup .xbmc and .config
  (add) restore from zip
  (change) vpn now works with .config files found in /storage/.config/config-vpn
  (add) oe module copy_file added
  (fix) set_busy fixed
  (fix) enable / disable ethernet

2013-02-22 v-0.0.28
  (fix) update url for update.openelec.tv

2013-02-22 v-0.0.28
  (fix) global file lock for xml config
  (change) inet socket changed to unix socket
  (add) hostname validation
  (add) tethering SSID name validation
  (add) tethering password validation
  (add) timeserver validation
  (add) validate needed data for a mount
  (fix) auto update notification
  (fix) some manual update fixes
  (add) search updates manual added
  (change) update rework

2013-02-18 v-0.0.26
  (fix) wizard fixes for 025

2013-02-18 v-0.0.25
  (change) optimize service load_value (samba conf)
  (fix) error if no mounts defined
  (change) optimized images from seo
  (change) unused pictures removed
  (change) use service as main window

2013-02-17 v-0.0.24
  (fix) double mount 

2013-02-17 v-0.0.23
  (change) upload logfiles moved to system